# PiPAT

./: .coveragerc  .gitignore  PAT.dbc  PERFORMANCE_CHANGES.md  README.md  bk5491b.py  can_comm.py  can_metrics.py  config.py  dashboard.py  device_comm.py  device_control.py  device_discovery.py  dmm_5491b.py  hardware.py  main.py  mrsignal.py  notes.ai  pat_matrix.py  pyproject.toml  pytest.ini  requirements.txt  rmcanview.py  roi.env.example  usbtmc_file.py
.github/workflows/: pytest.yml
deploy/systemd/: roi.service
docs/: 01-overview.md  02-prerequisites.md  03-installation.md  04-configuration.md  05-can-backends.md  06-instruments.md  07-running.md  08-troubleshooting.md  09-development.md  10-project-structure.md  90-performance-changes.md  99-internal-notes.md  README.md
scripts/: make_pi_dist.sh  mmeter_diag.py  pi_install.sh  service_install.sh  visa_diag.py
src/roi/: __init__.py  __main__.py  app.py  build_info.py  config.py
src/roi/assets/: __init__.py
src/roi/can/: __init__.py  comm.py  metrics.py  rmcanview.py
src/roi/core/: __init__.py  device_comm.py  device_discovery.py  diagnostics.py  hardware.py  pat_matrix.py
src/roi/devices/: __init__.py  bk5491b.py  mrsignal.py  usbtmc_file.py
src/roi/tools/: __init__.py  can_diag.py  (+5 more)
systemd/: roi.service
tests/: conftest.py  test_app_cli.py  test_bk5491b.py  test_build_info.py  test_can_comm.py  test_can_comm_more_coverage.py  test_can_metrics.py  test_config.py  test_device_comm.py  test_mrsignal.py  test_pat_matrix.py  test_tools_diagnostics.py  test_usbtmc_file.py  test_web_dashboard.py
(+4 files in other folders)
